stylesheets/homepage.css
* {
  background-color: black;
}

img {
  margin-top: 5%;
  margin-bottom: 10%;
  margin-left: 10%;
  display: inline-block;
  float: left;
}


h1 {
  color: white;
  display: inline-block;
  margin-top: 19%;
  margin-right: 10%;
  font-family: 'Lobster', cursive;
  text-align: center;
  float: right;
}

.center {
  text-align: center;
}

a {
  font-family: 'Lobster', cursive;
  text-decoration: none;
  color: white;
}

h3 {
  text-align: center;
  font-family: 'Lobster', cursive;
  color: white;
}

.logo {
  margin-top: 0;
  text-align: center;
}

